@@ -1,3 +1,8 @@
+2010-11-19 Doug Simons <doug.simons@testplant.com>
+
+	* WinNSMenu.m:
+	Send actions for items in a popUp menu as well as in a pullDown.
+
 2010-11-01 Jonathan Gillaspie <jonathan.gillaspie@testplant.com>>
 
 	* Resources/ThemeImages/common_3DArrowUp.tif:
